--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,7 +12,7 @@ build:
       - poetry config virtualenvs.create false
     post_install:
       - make base
-      - poetry run tox -e docs -- --no-watch
+      - poetry run -- tox -e docs -- --no-watch
 
 sphinx:
   configuration: docs/conf.py
