run make base in tox docs environment

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
       - asdf global poetry latest
       - poetry config virtualenvs.create false
     post_install:
-      - make base && poetry run -- tox -e docs -- --no-watch
+      - poetry run -- tox -e docs -- --no-watch
 
 sphinx:
   configuration: docs/conf.py
