--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,10 @@ allowlist_externals = poetry
 commands = poetry run invoke tests.install tests.unit
 
 [testenv:docs]
-allowlist_externals = poetry
-commands = poetry run invoke docs.install docs.build {posargs}
+allowlist_externals = 
+    make
+    poetry
+commands = make base && poetry run invoke docs.install docs.build {posargs}
 
 [testenv:lint]
 allowlist_externals = poetry
