split tox docs environment commands

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,9 @@ commands = poetry run invoke tests.install tests.unit
 allowlist_externals = 
     make
     poetry
-commands = make base && poetry run invoke docs.install docs.build {posargs}
+commands = 
+    make base
+    poetry run invoke docs.install docs.build {posargs}
 
 [testenv:lint]
 allowlist_externals = poetry
