--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,5 +15,5 @@ build:
       - poetry run -- tox -e docs -- --no-watch
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
   fail_on_warning: false
