--- a/tox.ini
+++ b/tox.ini
@@ -15,12 +15,8 @@ allowlist_externals = poetry
 commands = poetry run invoke tests.install tests.unit
 
 [testenv:docs]
-allowlist_externals = 
-    make
-    poetry
-commands = 
-    make base
-    poetry run invoke docs.install docs.build {posargs}
+allowlist_externals = poetry
+commands = poetry run invoke docs.install docs.build {posargs}
 
 [testenv:lint]
 allowlist_externals = poetry
