--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,7 @@ build:
   jobs:
     post_install:
       - pip install poetry
+      - poetry config virtualenvs.create false
       - make base
       - poetry run invoke docs.install
 
