--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
 isolated_build = True
-envlist = py311
+envlist =
+    {py311,py312}-lint
+    {py311,py312}-tests.doctest
+    {py311,py312}-tests.unit
 
 [testenv:tests]
 allowlist_externals = poetry
