--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   python: circleci/python@2.1.1
 
 jobs:
-  test:
+  python:
     parameters:
       version:
         type: string
@@ -30,9 +30,9 @@ jobs:
             poetry run tox -e tests.unit
 
 workflows:
-  all-tests:
+  tests:
     jobs:
-      - test:
+      - python:
           matrix:
             parameters:
-              version: ["3.10", "3.11"]
+              version: ["3.11", "3.12"]
