--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Linting
           command: |
             poetry run tox -e lint
-  docstring-tests:
+  tests:
     parameters:
       version:
         type: string
@@ -36,18 +36,6 @@ jobs:
           name: Docstring tests
           command: |
             poetry run tox -e tests.doctest
-  unit-tests:
-    parameters:
-      version:
-        type: string
-    executor:
-      name: python/default
-      tag: <<parameters.version>>
-    steps:
-      - checkout
-      - python/install-packages:
-          pkg-manager: poetry
-          args: --only base
       - run:
           name: Unit tests
           command: |
@@ -60,11 +48,7 @@ workflows:
           matrix:
             parameters:
               version: ["3.11", "3.12"]
-      - docstring-tests:
-          matrix:
-            parameters:
-              version: ["3.11", "3.12"]
-      - unit-tests:
+      - tests:
           matrix:
             parameters:
               version: ["3.11", "3.12"]
