--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ autodoc-pydantic = { version = ">=2.0.0" }
 
 [tool.poetry.group.tests.dependencies]
 pytest = { version = "^7.4.0" }
+pytest-cov = { version = "^4.1.0" }
 
 [tool.ruff]
 required-version = "0.1.3"
