--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ isolated_build = True
 
 [testenv:tests]
 allowlist_externals = poetry
-commands = poetry run invoke tests.install tests.doctest tests.unit
+commands = poetry run invoke tests.install tests.doctest tests.unit {posargs}
 
 [testenv:tests.doctest]
 allowlist_externals = poetry
@@ -11,7 +11,7 @@ commands = poetry run invoke tests.install tests.doctest
 
 [testenv:tests.unit]
 allowlist_externals = poetry
-commands = poetry run invoke tests.install tests.unit
+commands = poetry run invoke tests.install tests.unit {posargs}
 
 [testenv:docs]
 allowlist_externals = poetry
