Add `pytest-cov` and `coveralls` integration (#19)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,13 @@ version: "2.1"
 
 orbs:
   python: circleci/python@2.1.1
+  coveralls: coveralls/coveralls@2.2.1
 
 jobs:
   linting:
-    parameters:
-      version:
-        type: string
     executor:
       name: python/default
-      tag: <<parameters.version>>
+      tag: "3.11"
     steps:
       - checkout
       - python/install-packages:
@@ -39,16 +37,26 @@ jobs:
       - run:
           name: Unit tests
           command: |
-            poetry run tox -e tests.unit
+            poetry run -- tox -e tests.unit -- --cov
+      - coveralls/upload:
+          flag_name: <<parameters.version>>
+          parallel: true
+  coverage:
+    executor:
+      name: python/default
+    steps:
+      - coveralls/upload:
+          carryforward: 3.11, 3.12
+          parallel_finished: true
 
 workflows:
   checks:
     jobs:
-      - linting:
-          matrix:
-            parameters:
-              version: ["3.11", "3.12"]
+      - linting
       - tests:
           matrix:
             parameters:
               version: ["3.11", "3.12"]
+      - coverage:
+          requires:
+            - tests
