--- a/.github/workflows/semantic-pull-request.yml
+++ b/.github/workflows/semantic-pull-request.yml
@@ -1,4 +1,4 @@
-name: Enforce semantic PR titles
+name: Enforce semantic PR title
 
 on:
   pull_request_target:
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   main:
-    name: Validate pull request title
+    name: validate
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
