--- a/.github/workflows/tag-version-commit.yml
+++ b/.github/workflows/tag-version-commit.yml
@@ -1,4 +1,4 @@
-name: Tag version commits
+name: Tag version commit
 on:
   push:
     branches:
@@ -11,4 +11,4 @@ jobs:
       - uses: christophebedard/tag-version-commit@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          version_regex: 'release\(pkg\)\: (v[0-9]+\.[0-9]+\.[0-9]+[a-z0-9]*)'
+          version_regex: 'release\: (v[0-9]+\.[0-9]+\.[0-9]+[a-z0-9]*)'
