add create-release-pr workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,9 @@ autodoc-pydantic = { version = ">=2.0.0" }
 pytest = { version = "^7.4.0" }
 pytest-cov = { version = "^4.1.0" }
 
+[tool.poetry.group.release.dependencies]
+auto-changelog = { version = "^0.6.0" }
+
 [tool.ruff]
 required-version = "0.1.3"
 select = [
