--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Install base dependencies
         run: poetry install --sync --only base
       - name: Bump version and changelog
-        run: |
-          poetry run invoke release.install release.build -- -v ${{ github.event.inputs.version }}
+        run: poetry run invoke release.install release.build -- -v ${{ github.event.inputs.version }}
       - name: Create pull request
         uses: peter-evans/create-pull-request@v5.0.2
         with:
