add write-all permissions to create-release-pr workflow

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   create-pull-request:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
