--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Bump version and changelog
         run: |
           entry="$(poetry run invoke release.install release.build -- -v ${{ github.event.inputs.version }})"
-          echo "entry=$entry" >> $GITHUB_OUTPUT
+          echo "entry<<EOF"$'\n'"$entry"$'\n'EOF >> $GITHUB_OUTPUT
       - name: Create pull request
         uses: peter-evans/create-pull-request@v5.0.2
         with:
