--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: dev
+          fetch-tags: true
       - name: Install Python
         uses: actions/setup-python@v4
         with:
