--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: dev
-          fetch-tags: true
+          fetch-depth: 0
       - name: Install Python
         uses: actions/setup-python@v4
         with:
