--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: dev
-          fetch-tags: true
+          fetch-depth: 0
       - name: Install Python
         uses: actions/setup-python@v4
         with:
@@ -31,11 +31,4 @@ jobs:
         run: |
           entry="$(poetry run invoke release.install release.build -- -v ${{ github.event.inputs.version }})"
           echo "entry<<EOF"$'\n'"$entry"$'\n'EOF >> $GITHUB_OUTPUT
-      - name: Create pull request
-        uses: peter-evans/create-pull-request@v5.0.2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "release: v${{ github.event.inputs.version }}"
-          title: "release: v${{ github.event.inputs.version }}"
-          body: ${{ steps.vars.outputs.entry }}
-          branch: release/${{ github.event.inputs.version }}
+          echo $GITHUB_OUTPUT
