--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Bump version and changelog
         run: |
           poetry run invoke release.install release.build -- -v ${{ github.event.inputs.version }}) > entry.md
-          echo entry.md
+          cat entry.md
           body=$(cat entry.md)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
