--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -30,3 +30,10 @@ jobs:
       - name: Bump version
         run: |
           poetry run -q invoke release.build -- -v ${{ github.event.inputs.version }}
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v5.0.2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "release: v${{ github.event.inputs.version }}"
+          title: "release: v${{ github.event.inputs.version }}"
+          branch: release/${{ github.event.inputs.version }}
