refactor(pkg): remove `CHANGELOG.md` (#48)

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -27,23 +27,13 @@ jobs:
           poetry-version: 1.7.1
       - name: Install base dependencies
         run: poetry install --sync --only base
-      - name: Bump version and changelog
-        id: changelog
+      - name: Bump version
         run: |
-          poetry run -q invoke release.install release.build -- -v ${{ github.event.inputs.version }} > entry.md
-          echo; cat entry.md
-          delimiter="$(openssl rand -hex 8)"
-          {
-            echo "body<<${delimiter}"
-            cat entry.md
-            echo "${delimiter}"
-          } >> $GITHUB_OUTPUT
-          rm entry.md
+          poetry run -q invoke release.build -- -v ${{ github.event.inputs.version }}
       - name: Create pull request
         uses: peter-evans/create-pull-request@v5.0.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "release: v${{ github.event.inputs.version }}"
           title: "release: v${{ github.event.inputs.version }}"
-          body: ${{ steps.changelog.outputs.body }}
           branch: release/${{ github.event.inputs.version }}
