--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -2,15 +2,24 @@ name: Create GitHub release
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Build and release on GitHub
-        uses: "marvinpinto/action-automatic-releases@v1.2.1"
+      - name: Check out repository code
+        uses: actions/checkout@v4
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
+          fetch-depth: 0
+      - name: "Get previous tag"
+        id: latest-tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      - uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.latest-tag.outputs.tag }}
+          generateReleaseNotes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
