--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: rickstaa/action-create-tag@v1
         with:
           tag: v${{ github.event.inputs.version }}
-          github_token: ${{ sdcrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       # - name: Create tag
       #   uses: actions/github-script@v7
       #   with:
