--- a/cliff.toml
+++ b/cliff.toml
@@ -36,16 +36,15 @@ footer = """
 """
 # postprocessors
 postprocessors = [
-  # { pattern = '<REPO>', replace = "https://github.com/orhun/git-cliff" }, # replace repository URL
+  { pattern = '## \[([0-9]+\.[0-9]+\.[0-9]+[a-z0-9]*)\]', replace = "## [v${1}](https://github.com/eonu/feud/releases/tag/v${1})" },
+  { pattern = '\(#([0-9]+)\)', replace = "([#${1}](https://github.com/eonu/feud/issues/${1}))" },
+  { pattern = '\n\n\n', replace = "\n\n" },
 ]
+
 [git]
 # parse the commits based on https://www.conventionalcommits.org
 conventional_commits = true
 # filter out the commits that are not conventional
-filter_unconventional = true
-# process each line of a commit as an individual commit
-split_commits = false
-# regex for preprocessing the commit messages
 commit_preprocessors = [
   # { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](<REPO>/issues/${2}))"}, # replace issue numbers
 ]
