--- a/.github/workflows/auto-master-dev-merge.yml
+++ b/.github/workflows/auto-master-dev-merge.yml
@@ -6,7 +6,7 @@ on:
     types: [closed]
 
 jobs:
-  merge-master-back-to-dev:
+  auto-merge:
     if: github.event.pull_request.merged == true
     timeout-minutes: 2
     runs-on: ubuntu-latest
