--- a/.github/workflows/auto-master-dev-merge.yml
+++ b/.github/workflows/auto-master-dev-merge.yml
@@ -12,12 +12,11 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+          credentials: ${{secrets.AUTO_MERGE_SECRET}}
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Set Git config
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
       - name: Merge master back to dev
         run: |
           git fetch --unshallow
