dont use git fetch --unshallow

--- a/.github/workflows/auto-master-dev-merge.yml
+++ b/.github/workflows/auto-master-dev-merge.yml
@@ -25,7 +25,7 @@ jobs:
           git config --local user.name "Github Actions"
       - name: Create merge commit
         run: |
-          git fetch --unshallow
+          git fetch --all
           git checkout dev
           git pull
           git merge --no-ff master -m "chore(git): auto-merge master -> dev"
