--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ build:
     post_install:
       - pip install poetry
       - poetry config virtualenvs.create false
-      - poetry install --only base,main,docs -E extra-types
+      - poetry install --only base,main,docs
 
 sphinx:
   configuration: docs/source/conf.py
