--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries :: Application Frameworks",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: User Interfaces",
@@ -63,13 +64,15 @@ python = "^3.11"
 pydantic = "^2.0.0"
 click = "^8.1.7"
 docstring-parser = "^0.15"
+Pydantic = { version = "^2.0.0", optional = true, extras = ["email"] }
 rich-click = { version = "^1.6.1", optional = true }
 pydantic-extra-types = { version = "^2.1.0", optional = true, extras = ["all"] }
 
 [tool.poetry.extras]
 rich = ["rich-click"]
+email = ["email"]
 extra-types = ["pydantic-extra-types"]
-all = ["rich-click", "pydantic-extra-types"]
+all = ["rich-click", "email", "pydantic-extra-types"]
 
 [tool.poetry.group.base.dependencies]
 invoke = "2.2.0"
