--- a/.github/issue_templates/bug.yml
+++ b/.github/issue_templates/bug.yml
@@ -1,8 +1,17 @@
-name: Report a bug
+name: Report unexpected behaviour
 description: If you came across something unexpected, let us know here!
 labels: [bug, pending]
 
 body:
+  - type: checkboxes
+    id: checks
+    attributes:
+      label: Has this already been reported?
+      description: If you haven't already, please look other existing issues to see if this bug has already been reported.
+      options:
+        - label: This is a new bug!
+          required: true
+
   - type: textarea
     id: expected-behaviour
     attributes:
