--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -30,7 +30,7 @@ body:
       description: |
         Please describe the unexpected behaviour that you observed.
 
-        Make sure to provide as much information as possible, so that we can investigate as thoroughly as we can!
+        Make sure to provide as much information as possible, so that we can investigate as thoroughly as we can.
     validations:
       required: true
 
@@ -43,22 +43,12 @@ body:
         making sure that it is [minimal and reproducible](https://stackoverflow.com/help/minimal-reproducible-example).
 
       placeholder: |
-        """To reproduce my bug, run the following script with:
-
-        python command.py --bug
-        """
-
-        # command.py
-
         import feud
 
-        def command(*, bug: bool = False):
-            """Command that demonstrates the bug."""
-            if bug:
-                raise ValueError("Woops, this is buggy!")
+        ...
 
         if __name__ == "__main__":
-            feud.run(command)
+            feud.run()
       render: Python
 
   - type: textarea
@@ -66,8 +56,7 @@ body:
     attributes:
       label: Version details
       description: |
-        To help us get to the root of the problem as fast as possible, 
-        please run the following command to display version information about:
+        To help us get to the root of the problem as fast as possible, please run the following command to display version information about:
 
         - Python
         - Feud
