--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,17 +86,17 @@ ruff = "0.1.3"
 pydoclint = "0.3.8"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = { version = "^7.2.4" }
-sphinx-autobuild = { version = "^2021.3.14" }
-furo = { version = "^2023.9.10" }
-numpydoc = { version = "^1.6.0" }
-sphinx-favicon = { version = "^1.0.1" }
-sphinx_design = { version = "^0.5.0" }
-autodoc-pydantic = { version = ">=2.0.0" }
+sphinx = "^7.2.4,<=7.2.6"
+sphinx-autobuild = "^2021.3.14"
+furo = "^2023.9.10"
+numpydoc = "^1.6.0"
+sphinx-favicon = "^1.0.1"
+sphinx_design = "^0.5.0"
+autodoc-pydantic = ">=2.0.0"
 
 [tool.poetry.group.tests.dependencies]
-pytest = { version = "^7.4.0" }
-pytest-cov = { version = "^4.1.0" }
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
 
 [tool.ruff]
 required-version = "0.1.3"
