support python v3.13 + remove doctest

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ isolated_build = True
 
 [testenv:tests]
 allowlist_externals = poetry
-commands = poetry run invoke tests.install tests.doctest tests.unit {posargs}
+; commands = poetry run invoke tests.install tests.doctest tests.unit {posargs}
+commands = poetry run invoke tests.install tests.unit {posargs}
 
 [testenv:tests.doctest]
 allowlist_externals = poetry
