--- a/tox.ini
+++ b/tox.ini
@@ -25,3 +25,7 @@ commands = poetry run invoke lint.install lint.check
 [testenv:format]
 allowlist_externals = poetry
 commands = poetry run invoke lint.install lint.format
+
+[testenv:types]
+allowlist_externals = poetry
+commands = poetry run invoke types.install types.check
