--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,9 @@ autodoc-pydantic = ">=2.0.0"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 
+[tool.poetry.group.types.dependencies]
+mypy = "1.14.0"
+
 [tool.ruff]
 required-version = "0.1.3"
 select = [
